--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -16,10 +16,11 @@
   color: #707070;
   width: 83px;
   height: 101px;
-  border: .25px solid #707070;
+  border: 1px solid #d0d0d0;
   border-radius: 10px;
   margin: 10px;
   box-shadow: 0px 2px 2px;
+  padding: 1px;
 }
 
 .menu-option img {
@@ -36,4 +37,19 @@
 .enabled {
   border: 2px solid #707070;
   box-shadow: none;
+  padding: 0px;
+}
+
+.comments-container {
+  font-size: 12px;
+  color: #707070;
+  margin: 10px;
+}
+
+.comments-label {
+  margin: 5px;
+}
+
+.comments-container input[type="text"] {
+  width: 300px;
 }
